--- a/listup.html
+++ b/listup.html
@@ -8,6 +8,51 @@
       import { serach, fetchSubjectList, keywardSearch } from './src/search.js';
       const defaultSerachQuery = `SELECT DISTINCT ?book WHERE { }`;
       const serachTemplateQuery = `SELECT DISTINCT ?book WHERE {%query%}`;
+      function createCardsHtml(books) {
+        const articles = Array.from(books)
+          .map(([key, value]) => {
+            const bookImgUrl = `https://ndlsearch.ndl.go.jp/thumbnail/${value.get(
+              'isbn'
+            )}.jpg`;
+
+            const bookFigureTemplate = `
+      <figure class="image is-4by3 is-skeleton">
+          <img
+            src="${bookImgUrl}"
+            alt="${
+              value.get('title') == ''
+                ? value.get('title')
+                : value.get('bookIri')
+            }: 書影"
+          />
+        </figure>
+      `;
+            const bookCardTemplate = `
+    <article class="cell card">
+      <div class="card-image">
+        ${bookFigureTemplate}
+      </div>
+      <div class="card-content">
+        <p class="title is-5">${
+          value.get('title') != '' ? value.get('title') : value.get('bookIri')
+        }</p>
+        <p class="subtitle is-6">${value.get('creators')}</p>
+        <div class="content is-size-7">
+          ${Array.from(value.get('subjects'))
+            .map(
+              ([iri, label]) =>
+                `<a href="${iri}" target="_blank" rel="noopener noreferrer"><span class="tag">${label}</span></a>`
+            )
+            .join('')}
+        </div>
+      </div>
+    </article>
+  `;
+            return bookCardTemplate;
+          })
+          .join('');
+        return articles;
+      }
       window.addEventListener('DOMContentLoaded', async () => {
         //初期化
         document.getElementById('searchQuery').value = defaultSerachQuery;
@@ -66,7 +111,14 @@
           .addEventListener('click', () => {
             const serachQuery = document.getElementById('searchQuery').value;
             console.log(serachQuery);
-            serach(serachQuery).then((res) => {
+            serach(serachQuery).then((books) => {
+              //htmlを生成し、domに書き込み
+              document.getElementById(
+                'searchResNum'
+              ).innerHTML = `<p>取得件数：${books.size}</p>`;
+              const articles = createCardsHtml(books);
+              console.log('start write');
+              document.getElementById('bookList').innerHTML = articles;
               //skelton
               const skeletonImages =
                 document.querySelectorAll('.image.is-skeleton');
@@ -89,7 +141,14 @@
             const keywards = document
               .getElementById('keywardInput')
               .value.split(/[\u{20}\u{3000}]/u);
-            keywardSearch(keywards).then((res) => {
+            keywardSearch(keywards).then((books) => {
+              //htmlを生成し、domに書き込み
+              document.getElementById(
+                'searchResNum'
+              ).innerHTML = `<p>取得件数：${books.size}</p>`;
+              const articles = createCardsHtml(books);
+              console.log('start write');
+              document.getElementById('bookList').innerHTML = articles;
               //skelton
               const skeletonImages =
                 document.querySelectorAll('.image.is-skeleton');
