--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       header {
         border-bottom: 1px solid #333;
         display: flex;
+        justify-content: space-between;
         align-items: center;
       }
       main {
