--- a/index.html
+++ b/index.html
@@ -24,26 +24,6 @@
       main {
         margin: 0 1rem;
       }
-      /* keyward検索エリア */
-      /* .keyward-search-area fieldset {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        column-gap: 1rem;
-        height: 5rem;
-      }
-      .keyward-search-area fieldset .keyward-search-value {
-        grid-area: 1 / 1 / 2 / 5;
-      }
-      .keyward-search-area fieldset .keyward-search-submit {
-        grid-area: 1 / 5 / 2 / 6;
-      } */
-      /* 詳細検索エリア */
-      /* .advanced-search-details {
-        height: fit-content;
-      } */
       .advanced-search-area {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
@@ -72,17 +52,14 @@
       /* 検索結果表示エリア */
       .cards-area {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: stretch;
-        align-content: flex-start;
-        gap: 0.5rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+        grid-gap: 1rem;
       }
       .card {
-        flex: 0 0 24%;
-        max-width: 24rem;
-        min-width: 240px;
+        display: grid;
+        grid-template-rows: subgrid;
+        grid-row: span 2;
       }
       .card-img-area {
         text-align: center;
