--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
       }
       .card {
         display: grid;
+        grid-auto-columns: 100%;
         grid-template-rows: subgrid;
         grid-row: span 2;
       }
+
       .card-img-area {
         text-align: center;
         margin: 0.5rem;
@@ -75,7 +77,7 @@
     </style>
     <script type="module">
       import {
-        serach,
+        search,
         fetchSubjectList,
         keywardSearch,
         advancedSearch,
@@ -155,6 +157,23 @@
           const articles = createCardsHtml(booksMap); // htmlに変換
           writeSearchRes(booksMap, articles);
         });
+        //spaqrl検索ボタンが押された時の処理
+        const sparqlSearchForm = document.getElementById('sparqlSearchForm');
+        sparqlSearchForm.addEventListener('submit', async (event) => {
+          event.preventDefault();
+          // フォームデータを取得
+          const form = event.target;
+          const formData = new FormData(form);
+          console.log(form);
+          // フォームデータをオブジェクトに変換
+          const data = Object.fromEntries(formData.entries());
+          console.log(data);
+          // console.log(data['search']);
+          // advanced検索実行
+          const booksMap = await search(data['sparql']);
+          const articles = createCardsHtml(booksMap); // htmlに変換
+          writeSearchRes(booksMap, articles);
+        });
       });
       function createCardsHtml(books) {
         const articles = Array.from(books)
@@ -198,9 +217,9 @@
         return articles;
       }
       function writeSearchRes(booksMap, articles) {
-        serachResNum;
+        searchResNum;
         document.getElementById(
-          'serachResNum'
+          'searchResNum'
         ).innerHTML = `検索件数：${booksMap.size}`; //htmlの書き込み
         document.getElementById('booksCards').innerHTML = articles; //htmlの書き込み
       }
@@ -259,7 +278,10 @@
       <!-- SPARQL検索 -->
       <details>
         <summary>SPARQL検索</summary>
-        <textarea name="sparql" aria-label="book search sparql"></textarea>
+        <form id="sparqlSearchForm">
+          <textarea name="sparql" aria-label="book search sparql"></textarea>
+          <input class="sparql-search-submit" type="submit" value="検索" />
+        </form>
       </details>
 
       <hr />
@@ -267,7 +289,7 @@
       <div id="searchResDiv">
         <hgroup>
           <h1>検索結果</h1>
-          <p id="serachResNum">検索件数：</p>
+          <p id="searchResNum">検索件数：</p>
         </hgroup>
         <div id="booksCards" class="cards-area"></div>
       </div>
